--- a/index.html
+++ b/index.html
@@ -5,79 +5,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>QUIZ APP</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <header>
-            <h1 class="header__title">QUIZ-APP</h1>
+            <h2 class="header__title">QUIZ-APP</h2>
             </header>
         </div>
 
         <div class="body">
             <div class="content">
                 <div class="card">
-                    <h2 class="card__title">QUESTION:</h2>
+                    <div class="card__hero">
+                        <h2 class="card__title">QUESTION:</h2>
+                        <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+                    </div>
                     <p class="card__question">Hey, who are you?</p>
                     <button class="btn btn__answer">SHOW ANSWER</button>
-                    <ul class="card__taglist">
-                        <li class="card__tagitem">TAG 1</li>
-                        <li class="card__tagitem">TAG 2</li>
-                        <li class="card__tagitem">TAG 3</li>
-                        <li class="card__tagitem">TAG 4</li>
-                    </ul>
+                    <div class="card__taglist">
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                    </div>
                 </div>
+
                 <div class="card">
-                    <h2 class="card__title">QUESTION:</h2>
+                    <div class="card__hero">
+                        <h2 class="card__title">QUESTION:</h2>
+                        <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+                    </div>
                     <p class="card__question">Hey, who are you?</p>
                     <button class="btn btn__answer">SHOW ANSWER</button>
-                    <ul class="card__taglist">
-                        <li class="card__tagitem">TAG 1</li>
-                        <li class="card__tagitem">TAG 2</li>
-                        <li class="card__tagitem">TAG 3</li>
-                        <li class="card__tagitem">TAG 4</li>
-                    </ul>
+                    <div class="card__taglist">
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                    </div>
                 </div>
+
                 <div class="card">
-                    <h2 class="card__title">QUESTION:</h2>
+                    <div class="card__hero">
+                        <h2 class="card__title">QUESTION:</h2>
+                        <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+                    </div>
                     <p class="card__question">Hey, who are you?</p>
                     <button class="btn btn__answer">SHOW ANSWER</button>
-                    <ul class="card__taglist">
-                        <li class="card__tagitem">TAG 1</li>
-                        <li class="card__tagitem">TAG 2</li>
-                        <li class="card__tagitem">TAG 3</li>
-                        <li class="card__tagitem">TAG 4</li>
-                    </ul>
+                    <div class="card__taglist">
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                    </div>
                 </div>
+
                 <div class="card">
-                    <h2 class="card__title">QUESTION:</h2>
+                    <div class="card__hero">
+                        <h2 class="card__title">QUESTION:</h2>
+                        <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+                    </div>
                     <p class="card__question">Hey, who are you?</p>
                     <button class="btn btn__answer">SHOW ANSWER</button>
-                    <ul class="card__taglist">
-                        <li class="card__tagitem">TAG 1</li>
-                        <li class="card__tagitem">TAG 2</li>
-                        <li class="card__tagitem">TAG 3</li>
-                        <li class="card__tagitem">TAG 4</li>
-                    </ul>
+                    <div class="card__taglist">
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                    </div>
                 </div>
+
                 <div class="card">
-                    <h2 class="card__title">QUESTION:</h2>
+                    <div class="card__hero">
+                        <h2 class="card__title">QUESTION:</h2>
+                        <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+                    </div>
                     <p class="card__question">Hey, who are you?</p>
                     <button class="btn btn__answer">SHOW ANSWER</button>
-                    <ul class="card__taglist">
-                        <li class="card__tagitem">TAG 1</li>
-                        <li class="card__tagitem">TAG 2</li>
-                        <li class="card__tagitem">TAG 3</li>
-                        <li class="card__tagitem">TAG 4</li>
-                    </ul>
+                    <div class="card__taglist">
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                    </div>
                 </div>
+
+                <div class="card">
+                    <div class="card__hero">
+                        <h2 class="card__title">QUESTION:</h2>
+                        <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+                    </div>
+                    <p class="card__question">Hey, who are you?</p>
+                    <button class="btn btn__answer">SHOW ANSWER</button>
+                    <div class="card__taglist">
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                        <div class="card__tag">TAG 1</div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
         <div class="footer">
             <footer>
-                <h2>footer</h2>
+                <nav class="nav">
+                        <div class="nav__item"><a href="index.html"><i class="uil uil-estate"></i></a></div>
+                        <div class="nav__item"><a href="bookmarks.html"><i class="uil uil-bookmark"></i></a></div>
+                        <div class="nav__item"><a href="#"><i class="uil uil-edit-alt"></i></a></div>
+                        <div class="nav__item"><a href="profile.html"><i class="uil uil-user"></i></a></div>
+                </nav>
             </footer>
         </div>
 
