--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="body">
-            <div class="content">
+            <div class="profile">
                 <section class="profile__hero">
                     <img class="profile__img" src="https://source.unsplash.com/random/?face" alt="user profile pic">
                     <h2 class="profile__name">Sebastian Ottow</h2>
@@ -33,8 +33,9 @@
                         <div class="skill__item"> skill 4</div>
                     </div>
                 </section>
-                <button class="btn btn__logout">SHOW ANSWER</button>
-
+                <div class="profile__logout">
+                    <button class="btn btn__logout">LOGOUT</button>
+                </div>
             </div>
         </div>
 
