--- a/profile.html
+++ b/profile.html
@@ -1,57 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="assets/styles/styles.css">
-        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-        <title>QUIZ APP</title>
-    </head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
+    <title>QUIZ APP</title>
+  </head>
+  <body>
     <div class="container">
-        <div class="header">
-            <header>
-            <h2 class="header__title">QUIZ-APP</h2>
-            </header>
-        </div>
+      <div class="header">
+        <header>
+          <h2 class="header__title">QUIZ-APP</h2>
+        </header>
+      </div>
 
-        <div class="body">
-            <div class="profile">
-                <section class="profile__hero">
-                    <img class="profile__img" src="https://source.unsplash.com/random/?face" alt="user profile pic">
-                    <h2 class="profile__name">Sebastian Ottow</h2>
-                </section>
-                <section class="about">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ea laboriosam fugit voluptatem facere consectetur commodi molestiae saepe porro nobis dolores sunt magnam, rerum distinctio dolor. Illo veritatis ratione magnam.</p>
-                    <h3 class="skill__title">MY SKILLS</h3>
-                    <div class="skill__skills">
-                        <div class="skill__item">skill 1</div>
-                        <div class="skill__item">skill 2</div>
-                        <div class="skill__item">skill 3</div>
-                        <div class="skill__item"> skill 4</div>
-                    </div>
-                </section>
-                <div class="profile__logout">
-                    <button class="btn btn__logout">LOGOUT</button>
-                </div>
+      <div class="body">
+        <div class="profile">
+          <section class="profile__hero">
+            <img
+              class="profile__img"
+              src="https://source.unsplash.com/random/?face"
+              alt="user profile pic"
+            />
+            <h2 class="profile__name">Sebastian Ottow</h2>
+          </section>
+          <section class="about">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ea
+              laboriosam fugit voluptatem facere consectetur commodi molestiae
+              saepe porro nobis dolores sunt magnam, rerum distinctio dolor.
+              Illo veritatis ratione magnam.
+            </p>
+            <h3 class="skill__title">MY SKILLS</h3>
+            <div class="skill__skills">
+              <div class="skill__item">skill 1</div>
+              <div class="skill__item">skill 2</div>
+              <div class="skill__item">skill 3</div>
+              <div class="skill__item">skill 4</div>
             </div>
+          </section>
+          <div class="profile__logout">
+            <button class="btn btn__logout">LOGOUT</button>
+          </div>
         </div>
+      </div>
 
-        <div class="footer">
-            <footer>
-                <nav class="nav">
-                        <div class="nav__item"><a href="index.html"><i class="uil uil-estate"></i></a></div>
-                        <div class="nav__item"><a href="bookmarks.html"><i class="uil uil-bookmark"></i></a></div>
-                        <div class="nav__item"><a href="#"><i class="uil uil-edit-alt"></i></a></div>
-                        <div class="nav__item"><a href="profile.html"><i class="uil uil-user"></i></a></div>
-                </nav>
-            </footer>
-        </div>
+      <div class="footer">
+        <footer>
+          <nav class="nav">
+            <div class="nav__item">
+              <a href="index.html"><i class="uil uil-estate"></i></a>
+            </div>
+            <div class="nav__item">
+              <a href="bookmarks.html"><i class="uil uil-bookmark"></i></a>
+            </div>
+            <div class="nav__item">
+              <a href="#"><i class="uil uil-edit-alt"></i></a>
+            </div>
+            <div class="nav__item">
+              <a href="profile.html"><i class="uil uil-user"></i></a>
+            </div>
+          </nav>
+        </footer>
+      </div>
     </div>
-
-
-
-</body>
+  </body>
 </html>
