--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="assets/styles/styles.css" /> -->
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/styles/styles.css" />
+
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ICONS -->
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -24,7 +36,9 @@
           <div class="card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
-              <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+              <div class="card__bookmark">
+                <i class="uil uil-bookmark uil-bookmark-card"></i>
+              </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
             <button class="btn btn__answer">SHOW ANSWER</button>
@@ -39,7 +53,9 @@
           <div class="card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
-              <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+              <div class="card__bookmark">
+                <i class="uil uil-bookmark uil-bookmark-card"></i>
+              </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
             <button class="btn btn__answer">SHOW ANSWER</button>
@@ -54,7 +70,9 @@
           <div class="card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
-              <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+              <div class="card__bookmark">
+                <i class="uil uil-bookmark uil-bookmark-card"></i>
+              </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
             <button class="btn btn__answer">SHOW ANSWER</button>
@@ -69,7 +87,9 @@
           <div class="card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
-              <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+              <div class="card__bookmark">
+                <i class="uil uil-bookmark uil-bookmark-card"></i>
+              </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
             <button class="btn btn__answer">SHOW ANSWER</button>
@@ -84,7 +104,9 @@
           <div class="card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
-              <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+              <div class="card__bookmark">
+                <i class="uil uil-bookmark uil-bookmark-card"></i>
+              </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
             <button class="btn btn__answer">SHOW ANSWER</button>
@@ -99,7 +121,9 @@
           <div class="card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
-              <div class="card__bookmark"><i class="uil uil-bookmark"></i></div>
+              <div class="card__bookmark">
+                <i class="uil uil-bookmark uil-bookmark-card"></i>
+              </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
             <button class="btn btn__answer">SHOW ANSWER</button>
@@ -123,7 +147,7 @@
               <a href="bookmarks.html"><i class="uil uil-bookmark"></i></a>
             </div>
             <div class="nav__item">
-              <a href="#"><i class="uil uil-edit-alt"></i></a>
+              <a href="create.html"><i class="uil uil-edit-alt"></i></a>
             </div>
             <div class="nav__item">
               <a href="profile.html"><i class="uil uil-user"></i></a>
