--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/styles/styles.css" />
+
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ICONS -->
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -60,7 +72,7 @@
               <a href="bookmarks.html"><i class="uil uil-bookmark"></i></a>
             </div>
             <div class="nav__item">
-              <a href="#"><i class="uil uil-edit-alt"></i></a>
+              <a href="create.html"><i class="uil uil-edit-alt"></i></a>
             </div>
             <div class="nav__item">
               <a href="profile.html"><i class="uil uil-user"></i></a>
