Adjust font in input, select and textarea

--- a/create.html
+++ b/create.html
@@ -43,7 +43,7 @@
                 <label for="user__answer">your answer</label>
                 <textarea name="user__answer" id="user__answer cols="30" rows="10" placeholder="your answer.." required></textarea>
                 <div class="user__tags">
-                    <label for="user__tags">choose tags</label>
+                    <label for="user__tags">pick tags</label>
                     <select id="user__tags" required>
                         <option value="family">family</option>
                         <option value="friends">friends</option>
