--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div class="body">
         <div class="content">
-          <div class="card">
+          <div class="card" data-js="quiz-card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
               <div class="card__bookmark">
@@ -50,11 +50,10 @@
               </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
-            <button class="btn" data-js="showAnswerBtn">SHOW ANSWER</button>
-            <p class="card__answer">I am the QUIZ APP Mastermind!</p>
-            <button class="btn btn__answer--hide" data-js="hideAnswerBtn">
-              HIDE ANSWER
-            </button>
+            <button class="btn" data-js="card-Btn">SHOW ANSWER</button>
+            <p class="card__answer hide" data-js="show-answer">
+              I am the QUIZ APP Mastermind!
+            </p>
             <div class="card__taglist">
               <div class="card__tag">TAG 1</div>
               <div class="card__tag">TAG 1</div>
@@ -63,15 +62,27 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card" data-js="quiz-card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
               <div class="card__bookmark">
-                <i class="uil uil-bookmark uil-bookmark-card"></i>
+                <svg
+                  data-js="bookmark"
+                  class="card__bookmark__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M16,2H8A3,3,0,0,0,5,5V21a1,1,0,0,0,.5.87,1,1,0,0,0,1,0L12,18.69l5.5,3.18A1,1,0,0,0,18,22a1,1,0,0,0,.5-.13A1,1,0,0,0,19,21V5A3,3,0,0,0,16,2Zm1,17.27-4.5-2.6a1,1,0,0,0-1,0L7,19.27V5A1,1,0,0,1,8,4h8a1,1,0,0,1,1,1Z"
+                  />
+                </svg>
               </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
-            <button class="btn btn__answer">SHOW ANSWER</button>
+            <button class="btn" data-js="card-Btn">SHOW ANSWER</button>
+            <p class="card__answer hide" data-js="show-answer">
+              I am the QUIZ APP Mastermind!
+            </p>
             <div class="card__taglist">
               <div class="card__tag">TAG 1</div>
               <div class="card__tag">TAG 1</div>
@@ -80,15 +91,27 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card" data-js="quiz-card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
               <div class="card__bookmark">
-                <i class="uil uil-bookmark uil-bookmark-card"></i>
+                <svg
+                  data-js="bookmark"
+                  class="card__bookmark__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M16,2H8A3,3,0,0,0,5,5V21a1,1,0,0,0,.5.87,1,1,0,0,0,1,0L12,18.69l5.5,3.18A1,1,0,0,0,18,22a1,1,0,0,0,.5-.13A1,1,0,0,0,19,21V5A3,3,0,0,0,16,2Zm1,17.27-4.5-2.6a1,1,0,0,0-1,0L7,19.27V5A1,1,0,0,1,8,4h8a1,1,0,0,1,1,1Z"
+                  />
+                </svg>
               </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
-            <button class="btn btn__answer">SHOW ANSWER</button>
+            <button class="btn" data-js="card-Btn">SHOW ANSWER</button>
+            <p class="card__answer hide" data-js="show-answer">
+              I am the QUIZ APP Mastermind!
+            </p>
             <div class="card__taglist">
               <div class="card__tag">TAG 1</div>
               <div class="card__tag">TAG 1</div>
@@ -97,15 +120,27 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card" data-js="quiz-card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
               <div class="card__bookmark">
-                <i class="uil uil-bookmark uil-bookmark-card"></i>
+                <svg
+                  data-js="bookmark"
+                  class="card__bookmark__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M16,2H8A3,3,0,0,0,5,5V21a1,1,0,0,0,.5.87,1,1,0,0,0,1,0L12,18.69l5.5,3.18A1,1,0,0,0,18,22a1,1,0,0,0,.5-.13A1,1,0,0,0,19,21V5A3,3,0,0,0,16,2Zm1,17.27-4.5-2.6a1,1,0,0,0-1,0L7,19.27V5A1,1,0,0,1,8,4h8a1,1,0,0,1,1,1Z"
+                  />
+                </svg>
               </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
-            <button class="btn btn__answer">SHOW ANSWER</button>
+            <button class="btn" data-js="card-Btn">SHOW ANSWER</button>
+            <p class="card__answer hide" data-js="show-answer">
+              I am the QUIZ APP Mastermind!
+            </p>
             <div class="card__taglist">
               <div class="card__tag">TAG 1</div>
               <div class="card__tag">TAG 1</div>
@@ -114,15 +149,27 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card" data-js="quiz-card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
               <div class="card__bookmark">
-                <i class="uil uil-bookmark uil-bookmark-card"></i>
+                <svg
+                  data-js="bookmark"
+                  class="card__bookmark__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M16,2H8A3,3,0,0,0,5,5V21a1,1,0,0,0,.5.87,1,1,0,0,0,1,0L12,18.69l5.5,3.18A1,1,0,0,0,18,22a1,1,0,0,0,.5-.13A1,1,0,0,0,19,21V5A3,3,0,0,0,16,2Zm1,17.27-4.5-2.6a1,1,0,0,0-1,0L7,19.27V5A1,1,0,0,1,8,4h8a1,1,0,0,1,1,1Z"
+                  />
+                </svg>
               </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
-            <button class="btn btn__answer">SHOW ANSWER</button>
+            <button class="btn" data-js="card-Btn">SHOW ANSWER</button>
+            <p class="card__answer hide" data-js="show-answer">
+              I am the QUIZ APP Mastermind!
+            </p>
             <div class="card__taglist">
               <div class="card__tag">TAG 1</div>
               <div class="card__tag">TAG 1</div>
@@ -131,15 +178,27 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card" data-js="quiz-card">
             <div class="card__hero">
               <h2 class="card__title">QUESTION:</h2>
               <div class="card__bookmark">
-                <i class="uil uil-bookmark uil-bookmark-card"></i>
+                <svg
+                  data-js="bookmark"
+                  class="card__bookmark__icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M16,2H8A3,3,0,0,0,5,5V21a1,1,0,0,0,.5.87,1,1,0,0,0,1,0L12,18.69l5.5,3.18A1,1,0,0,0,18,22a1,1,0,0,0,.5-.13A1,1,0,0,0,19,21V5A3,3,0,0,0,16,2Zm1,17.27-4.5-2.6a1,1,0,0,0-1,0L7,19.27V5A1,1,0,0,1,8,4h8a1,1,0,0,1,1,1Z"
+                  />
+                </svg>
               </div>
             </div>
             <p class="card__question">Hey, who are you?</p>
-            <button class="btn btn__answer">SHOW ANSWER</button>
+            <button class="btn" data-js="card-Btn">SHOW ANSWER</button>
+            <p class="card__answer hide" data-js="show-answer">
+              I am the QUIZ APP Mastermind!
+            </p>
             <div class="card__taglist">
               <div class="card__tag">TAG 1</div>
               <div class="card__tag">TAG 1</div>
@@ -169,6 +228,6 @@
         </footer>
       </div>
     </div>
-    <script src="/assets/js/script.js" type="text/javascript"></script>
+    <script src="/assets/js/script.js" type="module"></script>
   </body>
 </html>
